<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Result"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/congratulationsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/congratulations_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/score_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalScoreLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:text="@string/empty_string"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/newBtn"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:text="@string/new_button_label"
        android:textSize="14sp"
        android:backgroundTint="@color/purple_500"
        />

    <Button
        android:id="@+id/finishBtn"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:text="@string/finish_button_label"
        android:textSize="14sp"
        android:backgroundTint="@color/purple_500"
        android:onClick="finishButtonClick"
        />

</androidx.appcompat.widget.LinearLayoutCompat>