<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Questions"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/welcomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="16dp"
            android:text="@string/welcome_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="top"
        >

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100"
            android:progress="0"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/questionTitleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:text="@string/question_title_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionDescLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:lines="4"
        android:text="@string/empty_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:text="@string/answer_one_label"
        android:textSize="14sp"
        android:onClick="answerOneClick"
        android:backgroundTint="@color/purple_500"
        />

    <Button
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:text="@string/answer_two_label"
        android:textSize="14sp"
        android:onClick="answerTwoClick"
        android:backgroundTint="@color/purple_500"
        />

    <Button
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:text="@string/answer_three_label"
        android:textSize="14sp"
        android:onClick="answerThreeClick"
        android:backgroundTint="@color/purple_500"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:gravity="center"
        >


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_weight="5"
            android:text="@string/submit_button_label"
            android:textSize="14sp"
            android:backgroundTint="#003366"
            />


    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>